--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -45,7 +45,7 @@ body {
   text-align: center; }
 
 .heading-primary {
-  color: #FFF;
+  color: #fff;
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 6rem; }
@@ -116,7 +116,7 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
 .btn--white {
-  background-color: white;
+  background-color: #fff;
   color: #777; }
 
 .btn::after {
@@ -132,7 +132,7 @@ body {
   transition: all .4s; }
 
 .btn--white::after {
-  background-color: white; }
+  background-color: #fff; }
 
 .btn:hover::after {
   transform: scale(1.4, 1.6);
