--- a/docs/sass/main.scss
+++ b/docs/sass/main.scss
@@ -7,6 +7,10 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
+$color-grey-dark: #777;
+$color-white: #fff;
+
+
 *,
 *::after,
 *::before {
@@ -24,7 +28,7 @@ body {
   font-weight: 400;
   /*font-size: 16px;*/
   line-height: 1.7;
-  color: #777;
+  color: $color-grey-dark;
   padding: 3rem;;
 
   box-sizing: border-box;
@@ -64,7 +68,7 @@ body {
 }
 
 .heading-primary {
-  color: #FFF;
+  color: $color-white;
   text-transform: uppercase;
 
   backface-visibility: hidden;
@@ -159,8 +163,8 @@ body {
 }
 
 .btn--white {
-  background-color: white;
-  color: #777;
+  background-color: $color-white;
+  color: $color-grey-dark;
 }
 
 .btn::after {
@@ -177,7 +181,7 @@ body {
 }
 
 .btn--white::after{
-  background-color: white;
+  background-color: $color-white;
 }
 
 .btn:hover::after {
